# news

./: .gitignore  README.md  REAL_DATA.md  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
flask-news/: .env.example  app.py
flask-news/routes/: articles.py  summarize.py
flask-news/services/: arxiv.py  llm.py  patents.py  rss.py  semantic_scholar.py
flask-news/static/: app.js  style.css
flask-news/templates/: index.html
